--- a/src/pug/tpl/base.pug
+++ b/src/pug/tpl/base.pug
@@ -22,6 +22,7 @@ html
   body(class!=body.class.join(' '))
     block body
     script(type="text/javascript", src="vendor/magenta/music-1.3.1.js")
+    script(type="text/javascript", src="vendor/i18n4js/i18n4js-1.3.1.min.js")
     block scripts
     script(type="text/javascript", src="assets/js/dependencies.min.js")
     script(type="text/javascript", src="assets/js/bundle.min.js")
