--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -31,18 +31,17 @@ body {
 .background {
   width: 100vw;
   height: 100vh;
-  background: #141E30;
-  background: linear-gradient(to bottom, #243B55, #141E30);
+  background: $color-black;
 }
 
-.color-0 { background: #EE2B29; fill: #EE2B29; }
-.color-1 { background: #ff9800; fill: #ff9800; }
-.color-2 { background: #ffff00; fill: #ffff00; }
-.color-3 { background: #c6ff00; fill: #c6ff00; }
-.color-4 { background: #00e5ff; fill: #00e5ff; }
-.color-5 { background: #2979ff; fill: #2979ff; }
-.color-6 { background: #651fff; fill: #651fff; }
-.color-7 { background: #d500f9; fill: #d500f9; }
+.color-0 { background: $color-red; fill: $color-red; }
+.color-1 { background: $color-orange; fill: $color-orange; }
+.color-2 { background: $color-yellow; fill: $color-yellow; }
+.color-3 { background: $color-green; fill: $color-green; }
+.color-4 { background: $color-turquoise; fill: $color-turquoise; }
+.color-5 { background: $color-blue; fill: $color-blue; }
+.color-6 { background: $color-violet; fill: $color-violet; }
+.color-7 { background: $color-magenta; fill: $color-magenta; }
 
 canvas {
   position: absolute;
