--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -32,6 +32,8 @@ $color-red-dark: #a5112d;
 $color-orange-dark: #df4c1b;
 $color-green-dark: #3ac335;
 $color-turquoise-dark: #00887e;
-$color-blue-dark: #102ea2;
+$color-blue-dark: #07195f;
 $color-violet-dark: #6f2cc8;
 $color-magenta-dark: #bc46bf;
+
+$color-blue-darker: #021148;
