--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -31,7 +31,7 @@ body {
 .background {
   width: 100vw;
   height: 100vh;
-  background: $color-black;
+  background: $color-blue-darker;
 }
 
 .color-0 { background: $color-red; fill: $color-red; }
