--- a/src/sass/_mod_dialog.scss
+++ b/src/sass/_mod_dialog.scss
@@ -1,19 +1,27 @@
 .dialog {
-  font-weight: 100;
+  font-weight: 300;
   background: #1C2C42;
   color: white;
   padding: 24px;
   z-index: 10;
   position: fixed;
-  top: 100px;
+  top: 20px;
   left: 50%;
   width: 80%;
   max-width: 500px;
   transform: translateX(-50%);
-  border: 2px solid #CDF352;
-  -webkit-box-shadow: 8px 8px 0 #CDF352;
-  box-shadow: 8px 8px 0 #CDF352;
+  border: 5px solid $color-yellow-dark;
   text-align: left;
+
+  h2 {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin: 0 0 0;
+  }
+
+  button.splash-button {
+    margin: 40px auto 10px;
+  }
 }
 
 .dialog select {
@@ -21,7 +29,7 @@
   font-family: inherit;
   font-size: 14px;
   border: none;
-  border-bottom: 2px solid #CDF352;
+  border-bottom: 2px solid $color-yellow;
   background: transparent;
   box-shadow: none;
   margin-bottom: 6px;
