Removes the intro screen and adds a loader instead.

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -184,6 +184,11 @@ button.splash-button.small {
   50% {
     opacity: 0.3; } }
 
+.loading {
+  font-size: 1.5em;
+  text-transform: uppercase;
+  color: #ffec02; }
+
 .controls {
   display: flex;
   position: absolute;
@@ -332,5 +337,60 @@ label.radio > .control-indicator {
 
 #inputNumButtons {
   vertical-align: middle; }
+
+.lds-ellipsis {
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+  vertical-align: middle; }
+
+.lds-ellipsis div {
+  position: absolute;
+  top: 27px;
+  width: 11px;
+  height: 11px;
+  border-radius: 50%;
+  background: #ffec02;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0); }
+
+.lds-ellipsis div:nth-child(1) {
+  left: 6px;
+  animation: lds-ellipsis1 0.6s infinite; }
+
+.lds-ellipsis div:nth-child(2) {
+  left: 6px;
+  animation: lds-ellipsis2 0.6s infinite; }
+
+.lds-ellipsis div:nth-child(3) {
+  left: 26px;
+  animation: lds-ellipsis2 0.6s infinite; }
+
+.lds-ellipsis div:nth-child(4) {
+  left: 45px;
+  animation: lds-ellipsis3 0.6s infinite; }
+
+@keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0); }
+  100% {
+    transform: scale(1); } }
+
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1); }
+  100% {
+    transform: scale(0); } }
+
+@keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0); }
+  100% {
+    transform: translate(19px, 0); } }
+
+.lds-ellipsis-btn-lg {
+  height: 48px; }
+  .lds-ellipsis-btn-lg div {
+    top: 18px; }
 
 /*# sourceMappingURL=default.css.map */
