--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,3 +4,4 @@ block main
   include sections/loader.html
   include sections/main.html
   include sections/settings.html
+  include sections/info.html
