--- a/src/sass/_mod_controls.scss
+++ b/src/sass/_mod_controls.scss
@@ -34,24 +34,9 @@
     }
   }
 
-  .spacer {
-    flex: 0 0 150px;
-    @include media-breakpoint-down(md) {
-      flex: 0 0 10px;
-    }
-  }
-
-  .keyboard {
-    flex-grow: 1;
-    display: flex;
-  }
-
-  .utility {
+  .utility-l, .utility-r {
     flex: 0 0 150px;
     display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
-    padding-left: 20px;
 
     button {
       position: relative;
@@ -74,9 +59,6 @@
     }
 
     @include media-breakpoint-down(md) {
-      flex: 0 0 50px;
-      flex-direction: column;
-      padding-left: 10px;
       button {
         flex: 0 0 40px;
         img {
@@ -84,6 +66,35 @@
           height: 25px;
         }
       }
+    }
+  }
+
+  .utility-l {
+    padding-right: 20px;
+    align-items: flex-end;
+    justify-content: flex-start;
+
+    @include media-breakpoint-down(md) {
+      flex: 0 0 50px;
+      padding-right: 10px;
+    }
+  }
+
+  .keyboard {
+    flex-grow: 1;
+    display: flex;
+  }
+
+  .utility-r {
+    flex: 0 0 150px;
+    align-items: flex-end;
+    justify-content: flex-end;
+    padding-left: 20px;
+
+    @include media-breakpoint-down(md) {
+      flex: 0 0 50px;
+      flex-direction: column;
+      padding-left: 10px;
     }
   }
 }
