--- a/src/pug/tpl/base.pug
+++ b/src/pug/tpl/base.pug
@@ -25,5 +25,5 @@ html
     script(type="text/javascript", src="vendor/i18n4js/i18n4js-1.3.1.min.js")
     block scripts
     script(type="text/javascript", src="assets/js/dependencies.min.js")
-    script(type="text/javascript", src="assets/js/bundle.min.js")
+    script(type="text/javascript", src="assets/js/bundle.min.js?v=2")
     block closing
