--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -8,6 +8,8 @@ $color-white: $color-white-real;
   -webkit-font-smoothing: antialiased;
 }
 
+$color-gray: #666;
+
 $color-yellow: #ffec02;
 $color-yellow-light: #f9f3af;
 $color-yellow-dark: #cab900;
