--- a/src/sass/_mod_controls.scss
+++ b/src/sass/_mod_controls.scss
@@ -108,3 +108,26 @@
     top: 70px;
   }
 }
+
+.embed-focus-tip {
+  position: absolute;
+  /* center hack */
+  width: 60vw;
+  left: 20vw;
+  bottom: 200px;
+  z-index: 3;
+  font-size: 20px;
+  line-height: 24px;
+  padding: 12px 1em;
+  font-weight: bold;
+  border-radius: 24px;
+  background-color: rgba(255, 255, 255, 0.75);
+  color: $color-blue-dark;
+  opacity: 0;
+  transition: opacity 0.5s linear;
+  pointer-events: none;
+
+  &.visible {
+    opacity: 1;
+  }
+}
