--- a/src/pug/tpl/base.pug
+++ b/src/pug/tpl/base.pug
@@ -14,7 +14,7 @@ html
     meta(property="og:description", content!=(description || config.siteDescription))
     block meta
     link(rel="icon", type="image/png", href="assets/img/favicon.png")
-    link(rel="stylesheet", href="assets/css/default.css")
+    link(rel="stylesheet", href="assets/css/default.css?v=2")
     block stylesheets
     title
       != (title ? title + ' - ' + config.siteName : config.siteName )
@@ -25,5 +25,5 @@ html
     script(type="text/javascript", src="vendor/i18n4js/i18n4js-1.3.1.min.js")
     block scripts
     script(type="text/javascript", src="assets/js/dependencies.min.js")
-    script(type="text/javascript", src="assets/js/bundle.min.js?v=2")
+    script(type="text/javascript", src="assets/js/bundle.min.js?v=3")
     block closing
