--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -35,7 +35,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  touch-action: manipulation;
+  touch-action: none;
   /* disable double-tap zoom */
   overscroll-behavior-y: contain; }
 
