--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -12,7 +12,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  touch-action: manipulation; /* disable double-tap zoom */
+  touch-action: none; /* disable double-tap zoom */
   overscroll-behavior-y: contain;
 }
 
