Prevent context menu popup and selection of texts and elements
Opening the context menu would lead to pointer event cancellation,
which would end all associates notes.

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -24,7 +24,12 @@ body {
   overflow: auto;
 }
 
-* { box-sizing: border-box; }
+* {
+  box-sizing: border-box;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
 [hidden] { display: none !important; }
 [disabled] { pointer-events: none; opacity: 0.3; }
 
