--- a/src/pug/tpl/base.pug
+++ b/src/pug/tpl/base.pug
@@ -21,9 +21,12 @@ html
     block head
   body(class!=body.class.join(' '), touch-action='none')
     block body
-    script(type="text/javascript", src="vendor/magenta/music-1.3.1.js")
-    script(type="text/javascript", src="vendor/i18n4js/i18n4js-1.3.1.min.js")
     block scripts
+    script(type="text/javascript", src="vendor/tone/tone-14.7.77/Tone.js")
+    script(type="text/javascript", src="vendor/tensorflow/tfjs-1.7.4/tf.min.js")
+    script(type="text/javascript", src="vendor/magenta/music-1.23.1/core.js")
+    script(type="text/javascript", src="vendor/magenta/music-1.23.1/piano_genie.js")
+    script(type="text/javascript", src="vendor/i18n4js/i18n4js-1.3.1.min.js")
     script(type="text/javascript", src="assets/js/dependencies.min.js")
     script(type="text/javascript", src="assets/js/bundle.min.js?v=3")
     block closing
